--- a/source/_base.jinja2
+++ b/source/_base.jinja2
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="/css/site.css">
 	</head>
 	<body>
-		<div class="container-fluid">
+		<div class="container">
 			{% block content %}{% endblock %}
 		</div>
 	</body>
