--- a/source/index.jinja2
+++ b/source/index.jinja2
@@ -4,9 +4,9 @@
         <div class="span12">
 
             {% markdown %}
-                # Statix site renderer
+                # Statin site renderer
 
-                The statix site renderer is designed to be a dead simple way of turning content of various levels of dynamicism
+                The statin site renderer is designed to be a dead simple way of turning content of various levels of dynamicism
                 into a static set of HTML suitable for serving via an HTTP server like Apache. It has the following basic goals:
 
                  * Trivial installation and use
@@ -15,13 +15,13 @@
                  * Support for rendering complex templates, straight HTML and simple Markdown files
                  * Easy to read and understand
 
-                Statix solves these problems using the following basic strategies:
+                Statin solves these problems using the following basic strategies:
 
                 ## Trivial installation and use
 
-                To create a new statix site:
+                To create a new statin site:
 
-                 * Fork the statix repo on github
+                 * Fork the statin repo on github
                  * Clone it into a dir locally
                  * Run virtualenv on that dir
                  * Run pip install -r requirements.txt
