Improved the look a little

--- a/source/_base.jinja2
+++ b/source/_base.jinja2
@@ -7,6 +7,13 @@
 	</head>
 	<body>
 		<div class="container">
+            <div class="row">
+                <div class="span12">
+                    <div class="page-header">
+                        <h1>Statin site renderer</h1>
+                    </div>
+                </div>
+            </div>
 			{% block content %}{% endblock %}
 		</div>
 	</body>
