Fixed bootstrap icons, bad file copy.

--- a/source/index.jinja2
+++ b/source/index.jinja2
@@ -119,7 +119,7 @@
                 <article>
                     <header>
                         <h4>
-                            <a href="{{ map(article) }}">{{ select(grab(article).as_html(),'h1').text() }}</a>
+                            <i class="icon-calendar"></i> <a href="{{ map(article) }}">{{ select(grab(article).as_html(),'h1').text() }}</a>
                         </h4>
                     </header>
                     <p>
