--- a/source/css/site.less
+++ b/source/css/site.less
@@ -1,1 +1,4 @@
 @import "_bootstrap/less/bootstrap.less";
+
+@iconSpritePath: "/img/glyphicons-halflings.png";
+@iconWhiteSpritePath: "/img/glyphicons-halflings-white.png";
