--- a/source/index.jinja2
+++ b/source/index.jinja2
@@ -115,7 +115,7 @@
             {% endfor %}
 
             <h3>Latest blog posts</h3>
-            {% for article in glob('blog/*.md') %}
+            {% for article in glob('blog/2*') %}
                 <article>
                     <header>
                         <h4>
