--- a/source/blog/_auto-md.jinja2
+++ b/source/blog/_auto-md.jinja2
@@ -1,9 +1,6 @@
-{% extends '_base.jinja2' %}
-{% block content %}
-    <article>
-        <h3>{{ select(content, 'abbr.published').attr('title') }}</h3>
+{% extends 'blog/_blog_base.jinja2' %}
+{% block blog_content %}
         {% markdown %}
         {{ content }}
         {% endmarkdown %}
-    </article>
 {% endblock %}
