--- a/source/_base.jinja2
+++ b/source/_base.jinja2
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{% if page_title %}{{ page_title }}{% endif %}</title>
-		<link rel="stylesheet" href="/css/site.css">
+		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
