--- a/source/_base.jinja2
+++ b/source/_base.jinja2
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>{% if page_title %}{{ page_title }}{% endif %}</title>
-		<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-        <script src="/bootstrap/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="{{ to_root }}/bootstrap/css/bootstrap.min.css">
+        <script src="{{ to_root }}/bootstrap/js/bootstrap.min.js"></script>
 	</head>
 	<body>
 		<div class="container">
