--- a/source/index.jinja2
+++ b/source/index.jinja2
@@ -3,7 +3,6 @@
     <div class="row">
         <div class="span8">
 
-
                 <p class="lead">
                     The statin site renderer is designed to be a dead simple way of turning content of various levels of dynamicism
                     into a static set of HTML
@@ -41,7 +40,7 @@
                 </article>
             {% endfor %}
             <div class="pull-right">
-                <a class="btn btn-link" href="/blog/">More..</a>
+                <a class="btn btn-link" href="{{ to_root }}/blog/index.html">More..</a>
             </div>
 
 
