--- a/source/blog/index.jinja2
+++ b/source/blog/index.jinja2
@@ -1,23 +1,42 @@
-{% extends '_base.jinja2' %}
-{% block content %}
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
+	</head>
+	<body>
+		<div class="container">
+            <div class="row">
+                <div class="span12">
+                    <div class="page-header">
+                        <h1>Statin site renderer</h1>
+                    </div>
+                </div>
+            </div>
+			
     <div class="row">
         <div class="span12">
 
             <h3>All blog entries</h3>
 
-            {% for article in glob('blog/2*') %}
+            {% for post in posts %}
                 <article>
                     <header>
                         <h4>
-                            <a href="{{ map(article) }}">{{ select(grab(article).as_html(),'h1').text() }}</a>
+                            <a href="{{ to_root }}/{{ post.uri }}">{{ post.posted }} {{ post.title }}</a>
                         </h4>
                     </header>
                     <p>
-                        {{ select(grab(article).as_html(),'h1 + p').text() }}
+                        {{ select(post.html, 'p:first').text() }}
                     </p>
                 </article>
-
             {% endfor %}
+
         </div>
     </div>
-{% endblock %}
+
+		</div>
+	</body>
+</html>
